istio-teaching/envoyfilters/applyto/dubbo/dubbo-provider-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dubbo-sample-provider-v1
  labels:
    app: dubbo-sample-provider
spec:
  selector:
    matchLabels:
      app: dubbo-sample-provider
  replicas: 1
  template:
    metadata:
      labels:
        app: dubbo-sample-provider
        version: v1
    spec:
      containers:
        - name: dubbo-sample-provider
          image: registry.cn-hangzhou.aliyuncs.com/hxpdocker/dubbo-sample-provider
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 20880
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dubbo-sample-provider-v2
  labels:
    app: dubbo-sample-provider
spec:
  selector:
    matchLabels:
      app: dubbo-sample-provider
  replicas: 1
  template:
    metadata:
      labels:
        app: dubbo-sample-provider
        version: v2
    spec:
      containers:
        - name: dubbo-sample-provider
          image: registry.cn-hangzhou.aliyuncs.com/hxpdocker/dubbo-sample-provider
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 20880
