istio-teaching/envoyfilters/applyto/dubbo/svc-dubbo.yaml
apiVersion: v1
kind: Service
metadata:
  name: dubbo-provider
spec:
  selector:
    app: dubbo-sample-provider
  ports:
    - name: tcp-dubbo
      protocol: TCP
      port: 20880
      targetPort: 20880
