istio-teaching/envoyfilters/applyto/dubbo/ef-dubbo-2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoyfilter-dubbo-proxy
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      listener:
        name: 10.68.144.97_20880
        filterChain:
          filter:
            name: "envoy.filters.network.tcp_proxy"
    patch:
      operation: REPLACE
      value:
        name: envoy.filters.network.dubbo_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.dubbo_proxy.v3.DubboProxy
          stat_prefix: outbound|20880||org.apache.dubbo.samples.basic.api.demoservice
          protocol_type: Dubbo
          serialization_type: Hessian2
          route_config:
          - name: outbound|20880||org.apache.dubbo.samples.basic.api.demoservice
            interface: org.apache.dubbo.samples.basic.api.DemoService
            routes:
            - match:
                method:
                  name:
                    exact: sayHello
              route:
                cluster: outbound|20880|v2|dubbo-provider.istio.svc.cluster.local
  - applyTo: NETWORK_FILTER
    match:
      listener:
        name: virtualInbound
        filterChain:
          destinationPort: 20880
          filter:
            name: "envoy.filters.network.tcp_proxy"
    patch:
      operation: REPLACE
      value:
        name: envoy.filters.network.dubbo_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.dubbo_proxy.v3.DubboProxy
          stat_prefix: inbound|20880||
          protocol_type: Dubbo
          serialization_type: Hessian2
          route_config:
          - name: inbound|20880||
            interface: org.apache.dubbo.samples.basic.api.DemoService
            routes:
            - match:
                method:
                  name:
                    exact: sayHello
              route:
                cluster: inbound|20880||
